# rs-mnist

./: Cargo.toml  index.html  main.js
src/: lib.rs  main.rs
